--- a/dna_rna_protein.html
+++ b/dna_rna_protein.html
@@ -17,7 +17,7 @@
   <h1>dna_rna_protein</h1>
   
   <h2>Description</h2>
-  <p>Write a code that, detects if a sequence of letters is a DNA, an RNA or a protein sequence. Assume that sequences with only ACTGs are DNAs. Do not consider <a href="https://www.bioinformatics.org/sms/iupac.html">ambiguous</a> amino acids or bases. 
+  <p>Write a code that detects if a sequence is a DNA, an RNA or protein. Assume that sequences with only A, C, T and G are DNAs. Do not consider <a href="https://www.bioinformatics.org/sms/iupac.html">ambiguous</a> amino acids or bases. 
 
 
 
