--- a/dna2allprots.html
+++ b/dna2allprots.html
@@ -20,7 +20,7 @@
   <h1>dna2allprots</h1>
   
   <h2>Description</h2>
-  <p>Write a function that Returns the list all possible proteins that could be encoded from a DNA segment. Consider the 3 reading frames and the reverse complementary sequence
+  <p>Write a function that returns the list all possible proteins that could be encoded from a DNA segment. Consider the 3 reading frames both on the forward and the reverse complementary sequence.
     
 </p>
 
