--- a/fasta2words.html
+++ b/fasta2words.html
@@ -21,6 +21,7 @@
   
   <h2>Description</h2>
   <p>Write a function that reads a fasta file and generates, a dictionary with the sequence_id as keys and an alphabetically sorted list of words of length k as values.
+    For the testing you require <a href="thefastcat.fasta">thefastcat.fasta</a> and <a href="protein_database.fasta">protein_database.fasta</a> 
 </p>
 
 <h2>Hint</h2>
